@@ -54,6 +54,9 @@ hibernate-ext.tools.jar = ${vendor.path}/hibernate-extensions/hibernate-tools.ja
 # ----- JDOM, version 1.1 or later -----
 jdom.jar = ${vendor.path}/jdom/jdom.jar
 
+# ----- JUnit, version 3.8 or later -----
+junit.jar = ${vendor.path}/junit/junit.jar
+
 # ----- Servlet API, version 2.3 ----
 servlet.jar = ${vendor.path}/servlet/servlet.jar
 
